# ZMP

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  MediaPlayer  README.md  audiomanager.cpp  audiomanager.h  cmake_install.cmake  createdialog.cpp  createdialog.h  deletedialog.cpp  deletedialog.h  deviceswidget.cpp  deviceswidget.h  equalizerwidget.cpp  equalizerwidget.h  fileswidget.cpp  fileswidget.h  ftpclient.cpp  ftpclient.h  iconbutton.h  main.cpp  mainwindow.cpp  mainwindow.h  metadataextractor.cpp  metadataextractor.h  playerwidget.cpp  playerwidget.h  playlistmanager.cpp  playlistmanager.h  playlistswidget.cpp  playlistswidget.h  readme.md  res.qrc  resources.rcc  settingswidget.cpp  settingswidget.h  style.qss  (+2 more)
MediaPlayer_autogen/: deps
MediaPlayer_autogen/EWIEGA46WW/: moc_audiomanager.cpp  moc_audiomanager.cpp.d  moc_deviceswidget.cpp  moc_deviceswidget.cpp.d  moc_equalizerwidget.cpp  moc_equalizerwidget.cpp.d  moc_fileswidget.cpp  moc_fileswidget.cpp.d  moc_iconbutton.cpp  moc_iconbutton.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_playerwidget.cpp  moc_playerwidget.cpp.d  moc_playlistswidget.cpp  moc_playlistswidget.cpp.d  moc_settingswidget.cpp  moc_settingswidget.cpp.d
zmp_win/: CMakeLists.txt  audiomanager.cpp  equalizerwidget.h  fileswidget.cpp  fileswidget.h  ftpclient.cpp  ftpclient.h  mainwindow.cpp  playerwidget.cpp  playerwidget.h  playlistswidget.cpp  res.qrc  settingswidget.cpp  settingswidget.h
